@@ -5,6 +5,11 @@ Revision history for Perl extension AI::Categorizer.
  - The building & installing process now uses Module::Build rather
    than ExtUtils::MakeMaker.
 
+ - When the features_kept mechanism was used to explicitly state the
+   features to use, and the scan_first parameter was left as its
+   default value, the features_kept mechanism would silently fail to
+   do anything.  This has now been fixed. [Spotted by Arnaud Gaudinat]
+
 0.07  Tue May  6 16:15:04 CDT 2003
 
  - Oops - eg/demo.pl and t/15-knowledge_set.t didn't make it into the
